[gd_scene load_steps=4 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34.1783, 33.5142 )

[node name="Enemy" type="KinematicBody2D"]
modulate = Color( 0.878431, 0.0784314, 0.0784314, 1 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="mover" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="mover" to="." method="_on_mover_timeout"]
